crates/dora-compiler/src/conversion/snapshots/xvm_compiler__conversion__tests__op_builder.snap
---
source: crates/dora-compiler/src/conversion/tests.rs
expression: op
---
%c1_i32 = arith.constant 1 : i32
